idea/testData/multiModuleHighlighting/multiplatform/basic/jvm/jvm.kt
impl class <error descr="[IMPLEMENTATION_WITHOUT_HEADER] 'impl' class 'Your' has no corresponding 'header' declaration">Your</error> {

}

header class <error descr="[HEADER_WITHOUT_IMPLEMENTATION] 'header' class 'His' has no implementation in module jvm for JVM">His</error> {

}

header class Their {

}

impl class Their {

}
